# CSC8501_Coursework

./: .gitignore  CMakeLists.txt
src/: file_handle.cpp  file_handle.h  main.cpp  polynomial.cpp  polynomial.h  ui_handler.cpp  ui_handler.h  utils.cpp  utils.h
